src/compiler/tests/valid/return/return.klt

fun get(num : Int): Int {
    return 5;
}

fun main (): None {
    var numero: Int;

    numero = get(5);

    print("El numero es: ", numero);
}